Fixing the spacing on the homepage hero image

--- a/portfoliostyles.css
+++ b/portfoliostyles.css
@@ -427,6 +427,11 @@ td
 	font-size:3rem;
 }
 
+.home #headline h1
+{
+	margin-bottom:0; 
+}
+
 .pan #headline h1
 {
 	margin:0;
